# kaleidoscope-cpp

./: CMakeLists.txt  main.cpp
include/kaleidoscope/: lexer.h
include/kaleidoscope/syntax/: ast.hpp  lexer.hpp  parser.hpp
lib/: CMakeLists.txt
lib/kaleidoscope/: CMakeLists.txt  lexer.cpp
lib/kaleidoscope/syntax/: ast.cpp  lexer.cpp  parser.cpp
test/: CMakeLists.txt
test/kaleidoscope/: CMakeLists.txt  lexer_test.cpp  test.cpp
test/kaleidoscope/syntax/: lexer_test.cpp  parser_test.cpp
